--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
-  "name": "FeddbCrud",
+  "name": "feddbcrud",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test2": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "cypress": "cypress open",
+    "cy:run": "cypress run -- --record --spec 'cypress/integration/todo_ui_spec.js'",
+    "unittest": "mocha",
+    "test": "unittest && cy:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "mongodb": "^3.5.2",
     "mongoose": "^5.8.10"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "chai": "^4.2.0",
+    "cypress": "^4.0.1",
+    "mocha": "^7.0.1",
     "nodemon": "^2.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rakibmedieinstitutet/FedDBfromScratch.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rakibmedieinstitutet/FedDBfromScratch/issues"
+  },
+  "homepage": "https://github.com/Rakibmedieinstitutet/FedDBfromScratch#readme",
+  "description": ""
 }
